# fds_P2

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
backend/gamekey_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/games/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py  viewsets.py  webhooks.py
backend/games/management/commands/: check_expired_keys.py
backend/games/migrations/: 0001_initial.py
backend/games/tests/: test_api.py  test_commands.py  test_webhook.py
frontend/: .gitignore  README.md  package-lock.json
frontend/src/app/: api.service.ts  api.types.ts  app.css  app.html  app.ts
